# Combination-App-Backend

./: Dockerfile  Makefile  README.md  docker-compose.yml  info.txt  pyproject.toml
.github/workflows/: main.yml
src/combination_app/: main.py
src/combination_app/api/: dependencies.py
src/combination_app/api/v1/: auth.py  combinations.py  router.py  users.py
src/combination_app/config/: database.py  settings.py
src/combination_app/models/: __init__.py  base.py  combination.py  user.py
src/combination_app/schemas/: combination.py  user.py
src/combination_app/services/: auth_service.py  combination_service.py  user_service.py
src/combination_app/utils/: helpers.py  security.py
tests/: conftest.py  test_auth.py  test_combination.py  test_users.py
